refactor: Migrate deprecated method usage (#22158)